--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,38 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.20.0"
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "A modern, AI-powered blogging platform with advanced editorial workflows, role-based permissions, and intelligent content generation.",
+	"type": "module",
+	"main": "index.ts",
+	"scripts": {
+		"dev": "tsx watch -r tsconfig-paths/register src/index.ts",
+		"start": "node dist/index.js",
+		"build": "tsc && tsc-alias",
+		"type-check": "tsc --noEmit",
+		"format": "biome format --write",
+		"format:check": "biome check",
+		"lint": "biome lint",
+		"lint:fix": "biome lint --write",
+		"check": "biome check --write",
+		"prepare": "husky"
+	},
+	"lint-staged": {
+		"*.{ts,js,json,md}": [
+			"biome check --write"
+		]
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"packageManager": "pnpm@10.20.0",
+	"devDependencies": {
+		"@biomejs/biome": "2.3.6",
+		"@types/node": "^24.10.1",
+		"ts-node": "^10.9.2",
+		"tsc-alias": "^1.8.16",
+		"tsconfig-paths": "^4.2.0",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.9"
+	}
 }
