--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
 		"@types/node": "^24.10.1",
+		"husky": "^9.1.7",
 		"ts-node": "^10.9.2",
 		"tsc-alias": "^1.8.16",
 		"tsconfig-paths": "^4.2.0",
