--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,13 @@
 	"packageManager": "pnpm@10.20.0",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.6",
+		"@types/bcrypt": "^6.0.0",
+		"@types/compression": "^1.8.1",
+		"@types/cookie-parser": "^1.4.10",
+		"@types/express": "^5.0.5",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^24.10.1",
+		"chalk": "^5.6.2",
 		"husky": "^9.1.7",
 		"ts-node": "^10.9.2",
 		"tsc-alias": "^1.8.16",
@@ -35,5 +41,16 @@
 		"tsx": "^4.20.6",
 		"typescript": "^5.9.3",
 		"vitest": "^4.0.9"
+	},
+	"dependencies": {
+		"bcrypt": "^6.0.0",
+		"compression": "^1.8.1",
+		"cookie-parser": "^1.4.7",
+		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.20.0",
+		"rate-limiter-flexible": "^8.2.1",
+		"winston": "^3.18.3",
+		"zod": "^3.25.76"
 	}
 }
