--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,11 @@ NODE_ENV=your_node_env
 
 # Logging Configuration
 LOG_LEVEL=your_log_level
+
+# Database Configuration
+DB_NAME=your_database_name
+DB_URL=your_database_url
+
+# Application configuration
+APP_NAME=your_app_name_here
+APP_VERSION=your_app_version_here
