feat: update environment configuration to include admin and JWT settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,3 +14,12 @@ DB_URL=your_database_url
 # Application configuration
 APP_NAME=your_app_name_here
 APP_VERSION=your_app_version_here
+
+# Admin Credentials
+ADMIN_EMAIL=your_admin_email_here
+
+# JWT Configuration
+JWT_ACCESS_TOKEN_SECRET=your_jwt_access_token_secret_here
+JWT_REFRESH_TOKEN_SECRET=your_jwt_refresh_token_secret_here
+JWT_ACCESS_TOKEN_EXPIRATION=your_jwt_access_token_expiration_here
+JWT_REFRESH_TOKEN_EXPIRATION=your_jwt_refresh_token_expiration_here
