--- a/backend/package.json
+++ b/backend/package.json
@@ -1,57 +1,57 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"description": "A modern, AI-powered blogging platform with advanced editorial workflows, role-based permissions, and intelligent content generation.",
-	"type": "module",
-	"main": "index.ts",
-	"scripts": {
-		"dev": "tsx watch -r tsconfig-paths/register src/index.ts",
-		"start": "node dist/index.js",
-		"build": "tsc && tsc-alias",
-		"type-check": "tsc --noEmit",
-		"format": "biome format --write",
-		"format:check": "biome check",
-		"lint": "biome lint",
-		"lint:fix": "biome lint --write",
-		"check": "biome check --write",
-		"prepare": "husky"
-	},
-	"lint-staged": {
-		"*.{ts,js,json,md}": [
-			"biome check --write"
-		]
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"packageManager": "pnpm@10.20.0",
-	"devDependencies": {
-		"@biomejs/biome": "2.3.6",
-		"@types/bcrypt": "^6.0.0",
-		"@types/compression": "^1.8.1",
-		"@types/cookie-parser": "^1.4.10",
-		"@types/express": "^5.0.5",
-		"@types/jsonwebtoken": "^9.0.10",
-		"@types/node": "^24.10.1",
-		"chalk": "^5.6.2",
-		"cookie-parser": "^1.4.7",
-		"husky": "^9.1.7",
-		"ts-node": "^10.9.2",
-		"tsc-alias": "^1.8.16",
-		"tsconfig-paths": "^4.2.0",
-		"tsx": "^4.20.6",
-		"typescript": "^5.9.3",
-		"vitest": "^4.0.9"
-	},
-	"dependencies": {
-		"bcrypt": "^6.0.0",
-		"compression": "^1.8.1",
-		"dotenv": "^17.2.3",
-		"express": "^5.1.0",
-		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.20.0",
-		"rate-limiter-flexible": "^8.2.1",
-		"winston": "^3.18.3",
-		"zod": "^3.25.76"
-	}
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "A modern, AI-powered blogging platform with advanced editorial workflows, role-based permissions, and intelligent content generation.",
+  "type": "module",
+  "main": "index.ts",
+  "scripts": {
+    "dev": "NODE_ENV=development tsx watch -r tsconfig-paths/register src/index.ts",
+    "start": "NODE_ENV=production node dist/index.js",
+    "build": "tsc && tsc-alias",
+    "type-check": "tsc --noEmit",
+    "format": "biome format --write",
+    "format:check": "biome check",
+    "lint": "biome lint",
+    "lint:fix": "biome lint --write",
+    "check": "biome check --write",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{ts,js,json,md}": [
+      "biome check --write"
+    ]
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.20.0",
+  "devDependencies": {
+    "@biomejs/biome": "2.3.6",
+    "@types/bcrypt": "^6.0.0",
+    "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.10.1",
+    "chalk": "^5.6.2",
+    "cookie-parser": "^1.4.7",
+    "husky": "^9.1.7",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.9"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.20.0",
+    "rate-limiter-flexible": "^8.2.1",
+    "winston": "^3.18.3",
+    "zod": "^3.25.76"
+  }
 }
