--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.ts",
   "scripts": {
-    "dev": "NODE_ENV=development tsx watch -r tsconfig-paths/register src/index.ts",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "cross-env NODE_ENV=development tsx watch -r tsconfig-paths/register src/index.ts",
+    "start": "cross-env NODE_ENV=production node dist/index.js",
     "build": "tsc && tsc-alias",
     "type-check": "tsc --noEmit",
     "format": "biome format --write",
@@ -35,6 +35,7 @@
     "@types/node": "^24.10.1",
     "chalk": "^5.6.2",
     "cookie-parser": "^1.4.7",
+    "cross-env": "^10.1.0",
     "husky": "^9.1.7",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
