feat: update Dockerfile for pnpm version management and add docker-compose for development setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,11 @@ FROM node:20-alpine3.20
 # Set working directory inside container
 WORKDIR /app
 
+
+# 
+ARG PNPM_VERSION
 # Enable Corepack so pnpm/yarn become available
-RUN corepack enable
+RUN corepack enable && corepack prepare pnpm@${PNPM_VERSION} --activate
 
 # Copy dependency files first for caching
 COPY package.json pnpm-lock.yaml ./
@@ -16,11 +19,8 @@ RUN pnpm install --frozen-lockfile
 # Copy all remaining project files
 COPY . .
 
-# Build TypeScript to JavaScript
-RUN pnpm run build
-
 # Expose the app port (for documentation only)
 EXPOSE 3000
 
 # Start the application using pnpm
-CMD ["pnpm", "start"]
+CMD ["pnpm", "dev"]
